# diagram-update

./: .gitignore  PROMPT.md  PROMPT_OPTIMIZE.md  PROMPT_OPTIMIZE.md.xml  README.md  pyproject.toml  ralph.yml
.agents/planning/2026-03-18-diagram-update/: idea-honing.md  rough-idea.md  summary.md
.agents/planning/2026-03-18-diagram-update/design/: detailed-design.md
.agents/planning/2026-03-18-diagram-update/implementation/: plan.md
.agents/planning/2026-03-18-diagram-update/research/: d2-syntax-generation.md  github-models-api.md  static-analysis.md  token-efficient-summarization.md
.eval-sandbox/research/: plan.md  summary.md
.eval-sandbox/review/: findings.md  plan.md
.ralph/: current-events  current-loop-id  events-20260318-204107.jsonl  history.jsonl
.ralph/agent/: scratchpad.md  tasks.jsonl
docs/diagrams/: architecture.d2  dependencies.d2  sequence.d2
src/diagram_update/: __init__.py  cli.py  config.py  llm.py  merger.py  models.py  signatures.py  skeleton.py  writer.py
src/diagram_update/analyzer/: __init__.py  c_parser.py  java_parser.py  python_parser.py
tests/: conftest.py  test_analyzer.py  test_c_parser.py  test_cli.py  test_config.py  test_integration.py  test_java_parser.py  test_llm.py  test_merger.py  test_models.py  test_python_parser.py  test_signatures.py  test_skeleton.py  test_writer.py
