[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diagram-update"
version = "0.1.0"
description = "Auto-generate D2 component diagrams from source code"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
diagram-update = "diagram_update.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/diagram_update"]

[tool.pytest.ini_options]
testpaths = ["tests"]
