[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diagram-update"
version = "0.1.0"
description = "Auto-generate D2 component diagrams from source code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["d2", "diagrams", "architecture", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Repository = "https://github.com/feigi/diagram-update"

[project.scripts]
diagram-update = "diagram_update.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/diagram_update"]

[tool.pytest.ini_options]
testpaths = ["tests"]
